--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,12 @@
   pointer-events: none;
 }
 
-.App-header {
+header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
